syntax = "proto3";

package product;

option go_package= "./product";

service ProductService{
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  rpc GetProducts(GetProductsRequest) returns (GetProductsResponse);
  rpc GetLatestProducts(GetLatestProductsRequest) returns (GetLatestProductsResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse);
  rpc UpdateProductStatus(UpdateProductStatusRequest) returns (UpdateProductStatusResponse);
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
}

message CreateProductRequest{
  int64 companyId = 1;
  string name = 2;
  optional string description = 3;
  optional string sku = 4;
  uint64 quantity = 5;
  uint64 price = 6;
  repeated string images = 7;
  uint32 productStatus = 8;
}

message CreateProductResponse{
  string id = 1;
  int64 status = 2;
  string error = 3;
}

message GetProductRequest{
  string id = 1;
}

message GetProductResponse{
  string id = 1;
  int64 companyId = 2;
  string name = 3;
  optional string description = 4;
  optional string sku = 5;
  uint64 quantity = 6;
  uint64 price = 7;
  repeated string images = 8;
  uint32 productStatus = 9;
  int64 status = 10;
  string error = 11;
}

message GetProductsRequest{
  int64 companyId = 1;
  optional string Name = 2;
  optional string Sku = 3;
  optional uint32 productStatus = 4;
  int32 limit = 5;
  int32 offset = 6;
}

message GetProductsResponse{
  repeated GetProductResponse products = 1;
  int64 status = 2;
  string error = 3;
}

message GetLatestProductsRequest{
  int64 companyId = 1;
  int32 limit = 2;
}

message GetLatestProductsResponse{
  repeated GetProductResponse products = 1;
  int64 status = 2;
  string error = 3;
}

message UpdateProductRequest{
  string id = 1;
  string name = 2;
  optional string description = 3;
  optional string sku = 4;
  uint64 quantity = 5;
  uint64 price = 6;
  repeated string images = 7;
}

message UpdateProductResponse{
  int64 status = 1;
  string error = 2;
}

message UpdateProductStatusRequest{
  string id = 1;
  uint32 productStatus = 2;
}

message UpdateProductStatusResponse{
  int64 status = 1;
  string error = 2;
}

message DeleteProductRequest{
  string id = 1;
}

message DeleteProductResponse{
  int64 status = 1;
  string error = 2;
}
